changement couleur cercle

--- a/index.html
+++ b/index.html
@@ -36,11 +36,18 @@
 
                     <p class="align">Taille du cercle</p>
                     <select class="align" id="taille_circle" name="taille_cercle">
-                      <option value="10000">Petit</option>
-                      <option value="25000">Moyen</option>
-                      <option value="50000">Grand</option>
+                      <option value="50000">Petit</option>
+                      <option value="100000">Moyen</option>
+                      <option value="200000">Grand</option>
                     </select><br>
-                    <p class="align">Texte (optionnel) <input id="label_circle" placeholder="texte à l'intérieur du cercle"></p><br>
+                    <p class="align">Couleur du cercle</p>
+                    <select class="align" id="color_circle" name="color_circle">
+                      <option value="blue">bleu</option>
+                      <option value="red">rouge</option>
+                      <option value="green">vert</option>
+                      <option value="gray">gris</option>
+                    </select><br>
+                    
                     <a href="#" class="ajouter"  id="drawCircle">Ajouter Cercle</a>
                     
                 </div>
