couleur alié/enemie sur les bateaux

--- a/index.html
+++ b/index.html
@@ -72,8 +72,16 @@
         </div></div>
         <div id="ajout_bateau" class="pop_up_inv hide"><div  class="pop_up">
                <div class="formulaire_bat">
-                <p id="bleu">bleu</p>
-                <p id="rouge">Rouge</p>
+                <p>Type de déplacement</p>
+                <select class="align" id="type_bateau" name="type_bateau">
+                      <option value="bateau">bateau</option>
+                      <option value="helico">helico</option>
+                </select><br>
+                <select class="align" id="color_bateau" name="color_bateau">
+                      <option value="blue">Alié</option>
+                      <option value="green">Neutre</option>
+                      <option value="red">Enemié</option>
+                </select><br>
                 <a href="#" class="ajouter" id="drawTrajet">Ajouter Trajet</a>
                 
                </div>
