--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
                 </div>
                 <div id="form_polyline" class="formulaire hide">
                     <h2>Créer une ligne</h2>
-                    <p>Taille du ligne</p>
+                    <p>Couleur de la ligne</p>
+                    <select class="align" id="color_polyline" name="color_polyline">
+                      <option value="blue">bleu</option>
+                      <option value="red">rouge</option>
+                      <option value="green">vert</option>
+                      <option value="gray">gris</option>
+                    </select><br>
                      <a href="#" class="ajouter"  id="drawPolyline">Ajouter Polyline</a>
                     
                 </div>
