Same pour les bateaux

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                       <option value="blue">Alié</option>
                       <option value="green">Neutre</option>
                       <option value="red">Enemié</option>
-                      <option value="pink">Pédalo magique</option>
+                      <option value="black">Pédalo magique</option>
                 </select><br>
                 <a href="#" class="ajouter" id="drawTrajet">Ajouter Trajet</a>
                 
