--- a/index.html
+++ b/index.html
@@ -74,20 +74,21 @@
                <div class="formulaire_bat">
                 <p>Type de déplacement</p>
                 <select class="align" id="type_bateau" name="type_bateau">
-                      <option value="bateau">bateau</option>
+                      <option value="porte-avion">porte-avion</option>
+                      <option value="cuirasse">cuirasse</option>
+                      <option value="destroyer">destroyer</option>
                       <option value="helico">helico</option>
+                      <option value="avion">avion</option>
                 </select><br>
                 <select class="align" id="vitesse_bateau" name="vitesse_bateau">
                       <option value="1.8">lente</option>
                       <option value="1">moyenne</option>
                       <option value="0.5">rapide</option>
-                      <option value="0.1">pédalo magique</option>
                 </select><br>
                 <select class="align" id="color_bateau" name="color_bateau">
-                      <option value="blue">Alié</option>
+                      <option value="blue">Allié</option>
                       <option value="green">Neutre</option>
-                      <option value="red">Enemié</option>
-                      <option value="black">Pédalo magique</option>
+                      <option value="red">Ennemi</option>
                 </select><br>
                 <a href="#" class="ajouter" id="drawTrajet">Ajouter Trajet</a>
                 
@@ -109,15 +110,6 @@
             <h1 id="ll">Paramètres</h1>
             <p class="align">Cacher les profondeurs</p> 
             <div class="align" id="profondeur"><input type="checkbox"></div>
-            <br/>
-            <span id="heure"></span> :
-            <span id="min"></span> :
-            <span id="sec"></span>
-            <br/>
-            <input id="reset" type="button" value="reset">
-            <input id="pauseButton" type="button" value="Pause">
-            <input id="reprendreButton" type="button" value="Reprendre">
-            <input id="x2Button" type="button" value="x2">
             
             <button class="hide btn_finish" id="stopDraw">Arrêter de dessiner</button>
             <button class="hide btn_finish" id="stopDrawPolyline">Arrêter de dessiner</button>
@@ -130,66 +122,7 @@
         <script src="js/Leaflet-0.7.7/leaflet.js"></script> 
         <script src="js/MovingMarker.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script>
 
-            $('#pauseButton').click(function () { timer.pause(); });
-            $('#reprendreButton').click(function () { timer.Reprendre(); });
-            $('#x2Button').click(function () { timer.x2(); });
-            $('#reset').click(function () { timer.reset(); });
-            var timer = {
-                totalSeconds: 0,
-                start: function () {
-                    var mat = this;
-
-                    this.interval = setInterval(function () {
-                        mat.totalSeconds += 1;
-
-                        $("#heure").text(Math.floor(mat.totalSeconds / 3600));
-                        $("#min").text(Math.floor(mat.totalSeconds / 60 % 60));
-                        $("#sec").text(parseInt(mat.totalSeconds % 60));
-                    }, 1000);
-                },
-
-                pause: function () {
-
-                    this.interval =  clearInterval(this.interval);
-                    this.interval =  delete this.interval;
-
-                },
-
-                x2: function () {
-
-                    // this.interval = this.totalSeconds += 2;
-                    var mat = this;
-
-                    this.interval = setInterval(function () {
-                        mat.totalSeconds += 2;
-
-                        $("#heure").text(Math.floor(mat.totalSeconds / 3600));
-                        $("#min").text(Math.floor(mat.totalSeconds / 60 % 60));
-                        $("#sec").text(parseInt(mat.totalSeconds % 60));
-                    }, 1000);
-
-
-                },
-
-                Reprendre: function () {
-
-                    this.interval = !this.interval;
-                    this.interval = this.start();
-                },
-
-                reset: function () {
-
-                    // clearInterval(this.interval);
-                    this.interval = this.totalSeconds -= this.totalSeconds +=1 ;
-                }
-
-            };
-
-            timer.start();
-
-        </script>
 
     </body>
 </html>
