--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <div>
           <a href="#" id="play" class="btn">LANCER</a>
         </div>
+        <div id="boussole"><img style="height:100%;width:100%" src="image/boussole.png"></div>
         <div id="map">
 
 
