--- a/index.html
+++ b/index.html
@@ -110,8 +110,11 @@
         <div class="settings">
             <h1 id="ll">Paramètres</h1>
             <p class="align">Cacher les profondeurs</p> 
-            <div class="align" id="profondeur"><input type="checkbox"></div>
-            
+            <div class="align" id="profondeur"><input type="checkbox"></div><br>
+             <p class="align">Cacher les côtes et les rivières</p> 
+            <div class="align" id="riv"><input type="checkbox"></div><br>
+                     <p class="align">Cacher les structures</p> 
+            <div class="align" id="structures"><input type="checkbox"></div><br>
             <button class="hide btn_finish" id="stopDraw">Arrêter de dessiner</button>
             <button class="hide btn_finish" id="stopDrawPolyline">Arrêter de dessiner</button>
             <button class="hide btn_finish" id="stopDrawTrajet">Arrêter de dessiner</button>
