--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         </div></div>
         <div id="ajout_bateau" class="pop_up_inv hide"><div  class="pop_up">
                <div class="formulaire_bat">
-                <p>Type de déplacement</p>
+                <h3>DEPLACEMENT</h3><br>
+                <label>Type de vehicule</label><br>
                 <select class="align" id="type_bateau" name="type_bateau">
                       <option value="porte-avion">porte-avion</option>
                       <option value="cuirasse">cuirasse</option>
@@ -80,16 +81,20 @@
                       <option value="helico">helico</option>
                       <option value="avion">avion</option>
                 </select><br>
+                <label>Vitesse du trajet</label><br>
                 <select class="align" id="vitesse_bateau" name="vitesse_bateau">
                       <option value="1.8">lente</option>
                       <option value="1">moyenne</option>
                       <option value="0.5">rapide</option>
                 </select><br>
+                <label>Alignement</label><br>
                 <select class="align" id="color_bateau" name="color_bateau">
                       <option value="blue">Allié</option>
                       <option value="green">Neutre</option>
                       <option value="red">Ennemi</option>
                 </select><br>
+                <label>Description (facutatif)</label><br>
+                <textarea id="description" name="description"></textarea>
                 <a href="#" class="ajouter" id="drawTrajet">Ajouter Trajet</a>
                 
                </div>
