--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
             <button class="hide btn_finish" id="stopDrawTrajet">Arrêter de dessiner</button>
             
                     </div>
-        
+        <script type="text/javascript" src="js/function.js"></script>
+        <script type="text/javascript" src="js/icone.js"></script>
         <script type="text/javascript" src="js/map.js"></script>
         <script src="js/Leaflet-0.7.7/leaflet.js"></script> 
         <script src="js/MovingMarker.js"></script>
