edit de trajet avec problème de vitesse

--- a/index.html
+++ b/index.html
@@ -129,9 +129,10 @@
             <button class="hide btn_finish" id="stopDraw">Arrêter de dessiner</button>
             <button class="hide btn_finish" id="stopDrawPolyline">Arrêter de dessiner</button>
             <button class="hide btn_finish" id="stopDrawTrajet">Arrêter de dessiner</button>
+            <button class="hide btn_finish" id="stopEditPolyline">Arrêter de dessiner</button>
             
                     </div>
-        <script type="text/javascript" src="js/function.js"></script>
+        
         <script type="text/javascript" src="js/icone.js"></script>
         <script type="text/javascript" src="js/map.js"></script>
         <script src="js/Leaflet-0.7.7/leaflet.js"></script> 
