changement de la vitesse seule d'un bateau

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             <button class="hide btn_finish" id="stopDrawPolyline">Arrêter de dessiner</button>
             <button class="hide btn_finish" id="stopDrawTrajet">Arrêter de dessiner</button>
             <button class="hide btn_finish" id="stopEditPolyline">Arrêter de dessiner</button>
+            <input class="hide" id="editVitesse" placeholder="Votre Vitesse"><br>
             
                     </div>
         
