pause de tous les bateaux

--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
                 
                </div>
         </div></div>
-        <div>
-          <a href="#" id="play" class="btn">LANCER</a>
+        <div class="big_btn">
+          <a href="#" id="play" class="btn">LANCER</a></br></br></br>
+          <a href="#" id="pause" class="btn">PAUSE</a>
         </div>
         <div id="boussole"><img style="height:100%;width:100%" src="image/boussole.png"></div>
         <div id="map">
