enlever les formes et les bateaux

--- a/index.html
+++ b/index.html
@@ -132,9 +132,28 @@
             <button class="hide btn_finish" id="stopDrawTrajet">Arrêter de dessiner</button>
             <button class="hide btn_finish" id="stopEditPolyline">Arrêter de dessiner</button>
             <input class="hide" id="editVitesse" placeholder="Votre Vitesse"><br>
+
+            <div class="delete">
+              <div class="delete_polyline">
+                <h2>Supprimer les lignes</h2>
+                <p class="delete_polyline_p"></p>
+              </div>
+              <div class="delete_cercle">
+                <h2>Supprimer les cercles</h2>
+                <p class="delete_cercle_p"></p>
+              </div>
+              <div class="delete_texte">
+                <h2>Supprimer les textes</h2>
+                <p class="delete_texte_p"></p>
+              </div>
+              <div class="delete_polygone">
+                <h2>Supprimer les polygones</h2>
+                <p class="delete_polygone_p"></p>
+              </div>
+            </div>
             
-                    </div>
-        
+          </div>
+        <script type="text/javascript" src="js/function.js"></script>
         <script type="text/javascript" src="js/icone.js"></script>
         <script type="text/javascript" src="js/map.js"></script>
         <script src="js/Leaflet-0.7.7/leaflet.js"></script> 
