--- a/index.html
+++ b/index.html
@@ -119,13 +119,15 @@
             <div class="forme" id="bateau"> <img src="image/bateau.png"></div>
             <div class="forme" id="forme"> <img src="image/forme.png"></div>
         </div>
-        <div class="settings">
+
+
+     <!--   <div class="settings">
             <h1 id="ll">Paramètres</h1>
-            <p class="align">Cacher les profondeurs</p> 
+            <p class="align">Cacher les profondeurs</p>
             <div class="align" id="profondeur"><input type="checkbox"></div><br>
-             <p class="align">Cacher les côtes et les rivières</p> 
+             <p class="align">Cacher les côtes et les rivières</p>
             <div class="align" id="riv"><input type="checkbox"></div><br>
-                     <p class="align">Cacher les structures</p> 
+                     <p class="align">Cacher les structures</p>
             <div class="align" id="structures"><input type="checkbox"></div><br>
             <button class="hide btn_finish" id="stopDraw">Arrêter de dessiner</button>
             <button class="hide btn_finish" id="stopDrawPolyline">Arrêter de dessiner</button>
@@ -151,8 +153,54 @@
                 <p class="delete_polygone_p"></p>
               </div>
             </div>
-            
-          </div>
+
+          </div> -->
+
+
+        <button id="sidebar-btn" class="sidebar-btn">
+            <div class="menu-stripes1"></div>
+            <div class="menu-stripes"></div>
+            <div class="menu-stripes2"></div>
+        </button>
+        <section id="sidebar" class="sidebar">
+            <div class="settings">
+                <h1>Parametres</h1>
+
+                <p class="align">Cacher les profondeurs</p>
+                <div class="align" id="profondeur"><input type="checkbox"></div><br>
+                <p class="align">Cacher les côtes et les rivières</p>
+                <div class="align" id="riv"><input type="checkbox"></div><br>
+                <p class="align">Cacher les structures</p>
+                <div class="align" id="structures"><input type="checkbox"></div><br>
+                <button class="hide btn_finish" id="stopDraw">Arrêter de dessiner</button>
+                <button class="hide btn_finish" id="stopDrawPolyline">Arrêter de dessiner</button>
+                <button class="hide btn_finish" id="stopDrawTrajet">Arrêter de dessiner</button>
+                <button class="hide btn_finish" id="stopEditPolyline">Arrêter de dessiner</button>
+                <input class="hide" id="editVitesse" placeholder="Votre Vitesse"><br>
+
+                <div class="delete">
+                    <div class="delete_polyline">
+                        <h2>Supprimer les lignes</h2>
+                        <p class="delete_polyline_p"></p>
+                    </div>
+                    <div class="delete_cercle">
+                        <h2>Supprimer les cercles</h2>
+                        <p class="delete_cercle_p"></p>
+                    </div>
+                    <div class="delete_texte">
+                        <h2>Supprimer les textes</h2>
+                        <p class="delete_texte_p"></p>
+                    </div>
+                    <div class="delete_polygone">
+                        <h2>Supprimer les polygones</h2>
+                        <p class="delete_polygone_p"></p>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
         <script type="text/javascript" src="js/function.js"></script>
         <script type="text/javascript" src="js/icone.js"></script>
         <script type="text/javascript" src="js/map.js"></script>
@@ -163,6 +211,81 @@
 <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
       
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+
+
+        <script>
+
+
+
+
+
+
+
+            var sidebar = (function() {
+                "use strict";
+
+                var $contnet         = $('#content'),
+                        $sidebar         = $('#sidebar'),
+                        $sidebarBtn      = $('#sidebar-btn'),
+                        $toggleCol       = $('body').add($contnet).add($sidebarBtn),
+                        sidebarIsVisible = false;
+
+                $sidebarBtn.on('click', function() {
+
+                    if (!sidebarIsVisible) {
+                        bindContent();
+                    } else {
+                        unbindContent();
+                    }
+
+                    toggleMenu();
+                });
+
+
+                function bindContent() {
+
+                    $contnet.on('click', function() {
+                        toggleMenu();
+                        unbindContent();
+                    });
+                }
+
+                function unbindContent() {
+                    $contnet.unbind();
+                }
+
+                function toggleMenu() {
+
+                    $toggleCol.toggleClass('sidebar-show');
+                    $sidebar.toggleClass('show');
+
+                    if (!sidebarIsVisible) {
+                        sidebarIsVisible = true;
+                    } else {
+                        sidebarIsVisible = false;
+                    }
+                }
+
+
+                var $menuToggle = $sidebar.find('.menu-toggle');
+
+                $menuToggle.each(function() {
+
+                    var $this       = $(this),
+                            $submenuBtn = $this.children('.menu-toggle-btns').find('.menu-btn'),
+                            $submenu    = $this.children('.submenu');
+
+                    $submenuBtn.on('click', function(e) {
+                        e.preventDefault();
+                        $submenu.slideToggle();
+                        $(this).toggleClass('active');
+                    });
+                });
+
+            })();
+
+
+        </script>
 
 
     </body>
