--- a/index.html
+++ b/index.html
@@ -105,10 +105,12 @@
                 
                </div>
         </div></div>
+<!--
         <div class="big_btn">
           <a href="#" id="play" class="btn">LANCER</a></br></br></br>
           <a href="#" id="pause" class="btn">PAUSE</a>
         </div>
+-->
         <div id="boussole"><img style="height:100%;width:100%" src="image/boussole.png"></div>
         <div id="map">
 
@@ -197,6 +199,27 @@
                     </div>
                 </div>
 
+           <div id="timer">
+ 
+ <span id="days">00J:</span> 
+  <span id="hours">00H:</span>
+  <span id="mins">00M</span>  
+  </div>
+<div id="controls">
+  <button id="play">Start</button>
+<button id="pause">Stop</button>
+<select id="speed">
+  <option value="1">1</option>
+  <option value="2">3</option>
+  <option value="5">5</option>
+  <option value="10">10</option>
+  <option value="50">50</option>
+  <option value="100">100</option>
+  <option value="10000">10000</option>
+  
+  
+</select>
+</div>
             </div>
 
         </section>
