Added files via upload

--- a/index2.html
+++ b/index2.html
@@ -113,8 +113,8 @@
   <span id="mins">00M</span>  
   </div>
 <div id="controls">
-  <button id="play">Start</button>
-<button id="pause">Stop</button>
+  <button id="play" class="btn">Start</button>
+<button id="pause"class="btn">Stop</button>
 <select id="speed">
   <option value="1">1</option>
   <option value="2">3</option>
